@@ -121,7 +121,7 @@ sessionInfo <- function(package = NULL)
     ## Hmm, see tools:::.get_standard_package_names()$base
     z$basePkgs <- package[basePkgs]
     if(any(!basePkgs)){
-        z$otherPkgs <- pkgDesc[!basePkgs]
+              z$otherPkgs  <- pkgDesc[!basePkgs]
         names(z$otherPkgs) <- package[!basePkgs]
     }
     loadedOnly <- loadedNamespaces()
@@ -135,6 +135,7 @@ sessionInfo <- function(package = NULL)
     es <- extSoftVersion()
     z$BLAS <- as.character(es["BLAS"]) #drop name
     z$LAPACK <- La_library()
+    z$LA_version <- La_version()
     l10n <- l10n_info()
     if (!is.null(l10n["system.codepage"]))
         z$system.codepage <- as.character(l10n["system.codepage"])
@@ -144,7 +145,7 @@ sessionInfo <- function(package = NULL)
     z
 }
 
-print.sessionInfo <- function(x, locale = TRUE,
+print.sessionInfo <- function(x, locale = TRUE, tzone = locale,
 			      RNG = !identical(x$RNGkind, .RNGdefaults),
 			      ...)
 {
@@ -164,12 +165,14 @@ print.sessionInfo <- function(x, locale = TRUE,
     lapack <- x$LAPACK
     if (is.null(lapack)) lapack <- ""
     if (blas == lapack && nzchar(blas))
-        cat("BLAS/LAPACK: ", blas, "\n", sep = "")
+        cat("BLAS/LAPACK:", blas)
     else {
-        if(nzchar(blas))   cat("BLAS:   ",   blas, "\n", sep = "")
-        if(nzchar(lapack)) cat("LAPACK: ", lapack, "\n", sep = "")
+        if(nzchar(blas))   cat("BLAS:  ",   blas, "\n")
+        if(nzchar(lapack)) cat("LAPACK:", lapack)
     }
-    cat("\n")
+    if(nzchar(lapack) && nzchar(LAver <- x$LA_version) && !grepl(LAver, lapack, fixed=TRUE))
+        cat(";  LAPACK version", LAver)
+    cat("\n\n")
     if(RNG) {
         cat("Random number generation:\n"
           , "RNG:    ", x$RNGkind[1], "\n"
@@ -180,10 +183,11 @@ print.sessionInfo <- function(x, locale = TRUE,
     if(locale) {
         cat("locale:\n")
         print(strsplit(x$locale, ";", fixed=TRUE)[[1]], quote=FALSE, ...)
-        if (!is.null(x$system.codepage) && !is.null(x$codepage) &&
-            x$system.codepage != x$codepage)
+        if ("NULL" != x$system.codepage && x$system.codepage != x$codepage)
             cat("system code page: ", x$system.codepage, "\n", sep = "")
         cat("\n")
+    }
+    if(tzone) {
         cat("time zone: ", x$tzone,  "\n", sep = "")
         cat("tzcode source: ", x$tzcode_type,  "\n", sep = "")
         cat("\n")
@@ -211,7 +215,7 @@ toLatexPDlist <- function(pdList, sep = "~") {
 }
 
 toLatex.sessionInfo <-
-    function(object, locale = TRUE,
+    function(object, locale = TRUE, tzone = locale,
 	     RNG = !identical(object$RNGkind, .RNGdefaults),
 	     ...)
 {
@@ -221,9 +225,10 @@ toLatex.sessionInfo <-
 	   if(locale)
 	       paste0("  \\item Locale: \\verb|",
                   gsub(";", "|, \\verb|", object$locale,  fixed=TRUE), "|"),
-               ## FIXME: does not print codepages.
-           if (locale) paste0("  \\item Time zone: \\verb|", object$tzone, "|"),
-           ## FIXME: omits tzcode_source and codepages
+           if(locale && "NULL" != object$system.codepage && object$system.codepage != object$codepage)
+               paste0("  \\item System code page: \\verb|", object$system.codepage,  "|"),
+           if (tzone) paste0("  \\item Time zone: \\verb|", object$tzone, "|"),
+           if (tzone) paste0("  \\item TZcode source: \\verb|", object$tzcode_type, "|"),
 	   paste0("  \\item Running under: \\verb|",
 		  gsub(";", "|, \\verb|", object$running, fixed=TRUE), "|"),
 	   if(RNG)
@@ -247,6 +252,8 @@ toLatex.sessionInfo <-
         if (nzchar(lapack))
             z <- c(z, paste0("  \\item LAPACK: \\verb|", lapack, "|"))
     }
+    if(nzchar(lapack) && nzchar(LAver <- object$LA_version) && !grepl(LAver, lapack, fixed=TRUE))
+        z <- c(z, paste0("; \\quad\\ LAPACK version", LAver))
 
     z <- c(z, strwrap(paste("\\item Base packages: ",
 			    paste(sort(object$basePkgs), collapse = ", ")),
